<resources>
    <string name="app_name">Muscle Map</string>

    <string name="title">Welcome to Muscle Map</string>
    <string name="sleep">Sleep</string>
    <string name="exercise">Exercise</string>
    <string name="diet">Diet</string>

    <!-- Login Fragment Values -->
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="name_hint">Name</string>
    <string name="pass_hint">Password</string>
    <string name="pass2_hint">Retype Password</string>
    <string name="email_hint">Email</string>
    <string name="no_email">Please input your email.</string>
    <string name="no_pass">Please input your password.</string>
    <string name="no_name">Please input your name.</string>
    <string name="no_match">Passwords do not match. </string>
    <string name="email_format">Email should have the format: abc@def.xyz</string>
    <string name="duplicate_email">Email in use. Select a different Email.</string>
    <string name="name_ws">Name cannot be only whitespaces</string>
    <string name="pass_length"> Password must be at least 8 characters in length.</string>
    <string name="invalid_credentials">Incorrect email or password.</string>


    <!-- New Sleep Log Fragment -->
    <string name="GetToSleep">Get To Sleep By </string>
    <string name="WakeUp">Wake Up By </string>
    <string name="SelectSleepTime">Select Sleep Time</string>
    <string name="SelectWakeTime">Select Wake Time</string>
    <string name="SetTime">Set Time</string>

    <!-- Sleep log Fragment -->
    <string name="HoursOfSleep">You have slept for %1$s</string>
    <string name="BedTime">Bed Time</string>
    <string name="WakeTime">Wake Time</string>
    <string name="BedTimeExample">10:30PM</string>
    <string name="WakeTimeExample">7:30AM</string>
    <string name="SetSleepTime">Set Sleep Time</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- New Workout Fragment -->
    <string name="Workout">New Workout</string>
    <string name="Name">Name: </string>
    <string name="StartTime">Start Time: </string>
    <string name="EndTime">End Time: </string>
    <string name="EditWorkoutCancel">Cancel</string>
    <string name="EditWorkoutSave">Save</string>
    <string name="SetWorkoutStartTime">Set Workout Start Time</string>
    <string name="SetWorkoutEndTime">Set Workout End Time</string>
    <string name="SaveSleepTime">Save</string>

    <!-- Edit Workout Fragment -->
    <string name="EditWorkout">Edit Workout</string>

    <!-- Meal fields -->
    <string name="enter_meal_title">Enter a meal</string>
    <string name="new_meal_button">New meal</string>
    <string name="diet_analysis_button">Statistics</string>

    <string name="meal_calories">Calories</string>
    <string name="meal_carbs">Carbs</string>
    <string name="meal_protein">Protein</string>
    <string name="meal_sodium">Sodium</string>
    <string name="meal_total_fat">Total Fat</string>
    <string name="meal_notes">Notes</string>

    <string name="avg_calories_breakfast">Average breakfast calories</string>
    <string name="avg_calories_lunch">Average lunch calories</string>
    <string name="avg_calories_dinner">Average dinner calories</string>
    <string name="avg_calories_snack">Average snack calories</string>
    <string name="avg_calories">Average overall calories</string>

    <string name="logout_button">Logout</string>
</resources>