<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editWorkoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF8F8"
    android:elevation="5dp"
    android:outlineAmbientShadowColor="#00F6F2F2"
    tools:context=".NewWorkoutFragment">

    <SearchView
        android:id="@+id/searchViewExercise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:queryHint="Type username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEndTime" />

    <TextView
        android:id="@+id/textViewWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Workout"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewStartTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewWorkout" />

    <TextView
        android:id="@+id/textViewStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/StartTime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/EndTime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewStartTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartTime" />

    <Button
        android:id="@+id/buttonNewWorkoutCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/EditWorkoutCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNewWorkoutSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/EditWorkoutSave"
        app:layout_constraintBottom_toBottomOf="@+id/buttonNewWorkoutCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonNewWorkoutCancel" />

    <EditText
        android:id="@+id/editTextWorkoutName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Workout Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewName"
        app:layout_constraintStart_toStartOf="@+id/buttonStartTime"
        app:layout_constraintTop_toTopOf="@+id/textViewName" />

    <Button
        android:id="@+id/buttonStartTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/SetWorkoutStartTime"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStartTime"
        app:layout_constraintStart_toEndOf="@+id/textViewStartTime"
        app:layout_constraintTop_toTopOf="@+id/textViewStartTime" />

    <Button
        android:id="@+id/buttonEndTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetWorkoutEndTime"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEndTime"
        app:layout_constraintStart_toStartOf="@+id/buttonStartTime"
        app:layout_constraintTop_toTopOf="@+id/textViewEndTime" />

    <TimePicker
        android:id="@+id/timePickerWorkout"
        style="@android:style/Widget.Material.Light.TimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetWorkoutTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/SetTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerWorkout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExercises"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonNewWorkoutCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/searchViewExercise"
        app:layout_constraintTop_toBottomOf="@+id/searchViewExercise" />

</androidx.constraintlayout.widget.ConstraintLayout>