<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editWorkoutLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDF8F8"
    android:elevation="5dp"
    tools:context=".EditWorkoutFragment">

    <SearchView
        android:id="@+id/searchViewExerciseEF"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:queryHint="Type username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonEndTimeEF" />

    <TextView
        android:id="@+id/textViewWorkoutEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:text="Edit Workout"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewStartTimeEF"
        app:layout_constraintTop_toBottomOf="@+id/textViewWorkoutEF" />

    <TextView
        android:id="@+id/textViewStartTimeEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:text="@string/StartTime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNameEF" />

    <TextView
        android:id="@+id/textViewEndTimeEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/EndTime"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/textViewStartTimeEF"
        app:layout_constraintTop_toBottomOf="@+id/textViewStartTimeEF" />

    <Button
        android:id="@+id/buttonEditWorkoutCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/EditWorkoutCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonEditWorkoutSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/EditWorkoutSave"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEditWorkoutCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonEditWorkoutCancel" />

    <EditText
        android:id="@+id/editTextWorkoutNameEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewNameEF"
        app:layout_constraintStart_toStartOf="@+id/buttonStartTimeEF"
        app:layout_constraintTop_toTopOf="@+id/textViewNameEF" />

    <Button
        android:id="@+id/buttonStartTimeEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/SetWorkoutStartTime"
        app:layout_constraintBottom_toBottomOf="@+id/textViewStartTimeEF"
        app:layout_constraintStart_toEndOf="@+id/textViewStartTimeEF"
        app:layout_constraintTop_toTopOf="@+id/textViewStartTimeEF" />

    <Button
        android:id="@+id/buttonEndTimeEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SetWorkoutEndTime"
        app:layout_constraintBottom_toBottomOf="@+id/textViewEndTimeEF"
        app:layout_constraintStart_toStartOf="@+id/buttonStartTimeEF"
        app:layout_constraintTop_toTopOf="@+id/textViewEndTimeEF" />

    <TimePicker
        android:id="@+id/timePickerWorkoutEF"
        style="@android:style/Widget.Material.Light.TimePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scrollbarStyle="insideInset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonSetWorkoutTimeEF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/SetTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timePickerWorkoutEF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExercisesEF"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonEditWorkoutCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/searchViewExerciseEF"
        app:layout_constraintTop_toBottomOf="@+id/searchViewExerciseEF" />

    <ImageView
        android:id="@+id/del_workout"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/buttonEndTimeEF"
        app:layout_constraintEnd_toEndOf="@+id/editTextWorkoutNameEF"
        app:layout_constraintTop_toTopOf="@+id/buttonStartTimeEF" />

</androidx.constraintlayout.widget.ConstraintLayout>